Closed Bug 1271045 Opened 10 years ago Closed 10 years ago

mail/components/migration/src/nsProfileMigrator.cpp(36): error C2511: 'nsresult nsProfileMigrator::Migrate(nsIProfileStartup *,const nsACString_internal &)': overloaded member function not found in 'nsProfileMigrator'

Categories

(Thunderbird :: Migration, defect)

49 Branch
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ssitter, Assigned: ssitter)

References

Details

(Keywords: regression)

Attachments

(1 file)

> mail/components/migration/src/nsProfileMigrator.cpp(36): error C2511: 'nsresult nsProfileMigrator::Migrate(nsIProfileStartup *,const nsACString_internal &)': overloaded member function not found in 'nsProfileMigrator' > mail/components/migration/src/nsProfileMigrator.h(20): note: see declaration of 'nsProfileMigrator' > mail/components/migration/src/nsProfileMigrator.cpp(39): error C2352: 'nsProfileMigrator::GetDefaultMailMigratorKey': illegal call of non-static member function > mail/components/migration/src/nsProfileMigrator.h(31): note: see declaration of 'nsProfileMigrator::GetDefaultMailMigratorKey' Bug 1265368 added a new parameter to migrate() in nsIProfileMigrator.idl
Attachment #8749988 - Flags: review?(rkent)
Attachment #8749988 - Flags: review?(mkmelin+mozilla)
Depends on: 1265368
Comment on attachment 8749988 [details] [diff] [review] add 3rd parameter to fix compilation error Review of attachment 8749988 [details] [diff] [review]: ----------------------------------------------------------------- Works for me.
Attachment #8749988 - Flags: feedback+
Comment on attachment 8749988 [details] [diff] [review] add 3rd parameter to fix compilation error Review of attachment 8749988 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me.
Attachment #8749988 - Flags: review?(rkent)
Attachment #8749988 - Flags: review?(mkmelin+mozilla)
Attachment #8749988 - Flags: review+
Keywords: checkin-needed
Assignee: nobody → ssitter
Status: NEW → ASSIGNED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: