Bug 1271045 - Port bug 1265368 | mail/components/migration/src/nsProfileMigrator.cpp(36): error C2511: 'nsresult nsProfileMigrator::Migrate(nsIProfileStartup *,const nsACString_internal &)': overloaded member function not found in 'nsProfileMigrator'. r=rkent a=Ratty for bustage fix on a CLOSED TREE